--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/ujjwalkar0/Flurn-Assignment-Backend.git"
+    "url": "git@github.com:ujjwalkar0/Flurn-Assignment-Backend.git"
   },
   "keywords": [
     "Nodejs",
@@ -25,9 +25,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
-    "mongoose": "^6.6.7"
-  },
-  "devDependencies": {
+    "mongoose": "^6.6.7",
     "nodemon": "^2.0.20"
   },
   "jest": {
